tests/baselines/reference/optionalParamReferencingOtherParams3.errors.txt
tests/cases/compiler/optionalParamReferencingOtherParams3.ts(1,20): error TS2373: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.


==== tests/cases/compiler/optionalParamReferencingOtherParams3.ts (1 errors) ====
    function right(a = b, b = a) {
                       ~
!!! error TS2373: Initializer of parameter 'a' cannot reference identifier 'b' declared after it.
        a;
        b;
    }